--- a/react/app/.gitignore
+++ b/react/app/.gitignore
@@ -6,7 +6,8 @@
 # testing
 /coverage
 
-
+# production
+/build
 
 # misc
 .DS_Store
@@ -18,3 +19,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
