--- a/react/app/package.json
+++ b/react/app/package.json
@@ -5,6 +5,7 @@
   "homepage": ".",
   "dependencies": {
     "react": "^16.2.0",
+    "react-css-modules": "^4.7.1",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
