--- a/react/app/package.json
+++ b/react/app/package.json
@@ -2,14 +2,10 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
   "dependencies": {
-    "css-loader": "^0.28.11",
     "react": "^16.2.0",
-    "react-css-modules": "^4.7.1",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1",
-    "style-loader": "^0.20.3"
+    "react-scripts": "1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
