css modules added, code refactored

--- a/react/app/package.json
+++ b/react/app/package.json
@@ -7,8 +7,10 @@
     "classnames": "^2.2.5",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-addons-update": "^15.6.2",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "react-scripts-cssmodules": "^1.1.10"
   },
   "scripts": {
     "start": "react-scripts start",
